--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.mobile.notifications": "1.4.2",
+    "com.unity.multiplayer.tools": "1.0.0",
     "com.unity.netcode.gameobjects": "1.2.0",
     "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.1.29",
